# rust_api_test

./: Cargo.toml  README.md  docker-compose.yaml  flake.nix
src/: lib.rs  main.rs  models.rs  routes.rs
