[package]
name = "rust_api_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.47", features = ["full"] }
tower = { version = "0.5.3" }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
